Dynamic alignment of the play button was fixed

--- a/public/assets/frontend/pymais/section-css/footer.css
+++ b/public/assets/frontend/pymais/section-css/footer.css
@@ -158,6 +158,7 @@
   background: var(--ep-primary-color-2);
   color: var(--ep-white-color);
   font-size: 13px;
+  padding-top: 25%;
 }
 
 .ep-footer__social ul li a:hover {
