--- a/public/assets/frontend/pymais/section-css/video.css
+++ b/public/assets/frontend/pymais/section-css/video.css
@@ -7,20 +7,22 @@
   border-radius: 20px;
 }
 .ep-video__btn {
-  width: 110px;
-  height: 110px;
-  border-radius: 100%;
-  text-align: center;
-  line-height: 120px;
-  background: var(--ep-white-color);
-  color: var(--ep-primary-color-2) !important;
-  font-size: 30px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -55px;
-  margin-top: -55px;
-}
+    width: 110px;
+    height: 110px;
+    border-radius: 100%;
+    text-align: center;
+    background: var(--ep-white-color);
+    color: var(--ep-primary-color-2) !important;
+    font-size: 30px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 .ep-video__btn:hover {
   background: var(--ep-primary-color-2);
   color: var(--ep-white-color) !important;
